--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,30 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.navigation-container {
+  width: 100%;
+  height: 12rem;
+  background-color: #F6F6F6;
+  margin-top: 20px;
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigation-container h1 {
+  font-size: 4rem;
+}
+.navigation-container nav {
+  display: flex;
+  justify-content: space-between;
+  width: 35%;
+}
+.navigation-container a {
+  text-decoration: none;
+  color: #23293B;
+  font-size: 1.7rem;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -169,6 +193,12 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .header-img {
+  width: 100%;
+}
+.home .header-img img {
+  border-radius: 5px;
 }
 .home .intro h2 {
   padding: 15px;
@@ -211,6 +241,22 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #23293B;
+  color: #F6F6F6;
+  border-radius: 7px;
+  padding: 5px 10px;
+  font-size: 2rem;
+  width: 40%;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #F6F6F6;
+  color: #23293B;
+  transition: 2s;
 }
 .home .walk .walk-img {
   width: 46%;
