--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,24 @@
-// Navigation code here
+.navigation-container {
+    width: 100%;
+    height: 12rem;
+    background-color: @wild-sand;
+    margin-top: 20px;
+    .defaultPadding();
+    .flexDefault(space-between);
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+        width: 35%;
+    }
+
+    a {
+        text-decoration: none;
+        color: @ebony-clay;
+        font-size: 1.7rem;
+    }
+}
