--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,15 @@ p {
   justify-content: space-between;
   width: 35%;
 }
+@media (max-width: 500px) {
+  .navigation-container nav {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
 .navigation-container a {
   text-decoration: none;
   color: #23293B;
@@ -194,11 +203,25 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .home {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
 .home .header-img {
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .header-img {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 .home .header-img img {
   border-radius: 5px;
+  width: 100%;
 }
 .home .intro h2 {
   padding: 15px;
@@ -211,11 +234,40 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    height: auto;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -233,8 +285,25 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 0px;
+    padding: 50px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    order: 2;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -253,6 +322,13 @@ footer {
   font-size: 2rem;
   width: 40%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 30px;
+    border-radius: 5px;
+  }
+}
 .home .walk .walk-text .btn:hover {
   background-color: #F6F6F6;
   color: #23293B;
@@ -261,6 +337,12 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
