--- a/less/global.less
+++ b/less/global.less
@@ -30,6 +30,11 @@ p {
   line-height: 1.4;
 }
 
+.main-container {
+  width: 100%;
+  margin: 0 auto;  
+}
+
 .container {
   max-width: 800px;
   width: 100%;
