--- a/less/home-page.less
+++ b/less/home-page.less
@@ -86,7 +86,6 @@
 
   .walk {
     margin-top: 60px;
-    border-top: 1px solid @main-border-color;
     padding: 50px 60px;
     display: flex;
     justify-content: center;
@@ -119,6 +118,7 @@
         padding: 5px 10px;
         font-size: 2rem;
         width: 40%;
+        transition: 2s ease-out;
 
         @media @phone {
           width: 100%;
@@ -129,7 +129,7 @@
         &:hover {
           background-color: @wild-sand;
           color: @ebony-clay;
-          transition: 2s;
+          transition: 2s ease-in;
         }
       }
     }
