--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,9 +2,9 @@
     width: 100%;
     height: 12rem;
     background-color: @wild-sand;
-    margin-top: 20px;
     .defaultPadding();
     .flexDefault(space-between, column);
+    position: fixed;
 
     h1 {
         font-size: 4rem;
